--- a/notebooks/notebook6.ipynb
+++ b/notebooks/notebook6.ipynb
@@ -3,266 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%reload_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from src.data import load_raw_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " File 2022-01 already exists\n",
-      " File 2022-02 already exists\n",
-      " File 2022-03 already exists\n",
-      " File 2022-04 already exists\n",
-      " File 2022-05 already exists\n",
-      " File 2022-06 already exists\n",
-      " File 2022-07 already exists\n",
-      " File 2022-08 already exists\n",
-      " File 2022-09 already exists\n",
-      " File 2022-10 already exists\n",
-      " File 2022-11 already exists\n",
-      " File 2022-12 already exists\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>pickup_datetime</th>\n",
-       "      <th>pickup_location_id</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2022-01-01 00:35:40+00:00</td>\n",
-       "      <td>142</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2022-01-01 00:33:43+00:00</td>\n",
-       "      <td>236</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2022-01-01 00:53:21+00:00</td>\n",
-       "      <td>166</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2022-01-01 00:25:21+00:00</td>\n",
-       "      <td>114</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2022-01-01 00:36:48+00:00</td>\n",
-       "      <td>68</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3399544</th>\n",
-       "      <td>2022-12-31 23:46:00+00:00</td>\n",
-       "      <td>16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3399545</th>\n",
-       "      <td>2022-12-31 23:13:24+00:00</td>\n",
-       "      <td>75</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3399546</th>\n",
-       "      <td>2022-12-31 23:00:49+00:00</td>\n",
-       "      <td>168</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3399547</th>\n",
-       "      <td>2022-12-31 23:02:50+00:00</td>\n",
-       "      <td>238</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3399548</th>\n",
-       "      <td>2022-12-31 23:00:15+00:00</td>\n",
-       "      <td>85</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>39090266 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                  pickup_datetime  pickup_location_id\n",
-       "0       2022-01-01 00:35:40+00:00                 142\n",
-       "1       2022-01-01 00:33:43+00:00                 236\n",
-       "2       2022-01-01 00:53:21+00:00                 166\n",
-       "3       2022-01-01 00:25:21+00:00                 114\n",
-       "4       2022-01-01 00:36:48+00:00                  68\n",
-       "...                           ...                 ...\n",
-       "3399544 2022-12-31 23:46:00+00:00                  16\n",
-       "3399545 2022-12-31 23:13:24+00:00                  75\n",
-       "3399546 2022-12-31 23:00:49+00:00                 168\n",
-       "3399547 2022-12-31 23:02:50+00:00                 238\n",
-       "3399548 2022-12-31 23:00:15+00:00                  85\n",
-       "\n",
-       "[39090266 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rides = load_raw_data(year =2022)\n",
-    "rides"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "pickup_datetime       0\n",
-       "pickup_location_id    0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rides.isnull().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\LENOVO\\Desktop\\Time_series_project\\src\\data.py:135: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
-      "  rides[\"pickup_hour\"] = rides['pickup_datetime'].dt.floor('H')\n",
-      "C:\\Users\\LENOVO\\Desktop\\Time_series_project\\src\\data.py:86: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
-      "  pd.DataFrame({\"pickup_hour\": pd.date_range(start=day, end=day + pd.Timedelta(days=1), freq=\"H\")[:-1]})\n",
-      "100%|██████████| 258/258 [00:05<00:00, 46.08it/s]\n",
-      "C:\\Users\\LENOVO\\Desktop\\Time_series_project\\src\\data.py:111: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
-      "  start=agg_rides[\"pickup_hour\"].min().floor(\"H\"),\n",
-      "C:\\Users\\LENOVO\\Desktop\\Time_series_project\\src\\data.py:112: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
-      "  end=agg_rides[\"pickup_hour\"].max().ceil(\"H\") - pd.Timedelta(hours=1),\n",
-      "C:\\Users\\LENOVO\\Desktop\\Time_series_project\\src\\data.py:110: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
-      "  full_range = pd.date_range(\n"
-     ]
-    }
-   ],
-   "source": [
-    "from src.data import transform_raw_data_into_ts_data\n",
-    "\n",
-    "rides = transform_raw_data_into_ts_data(rides)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 260/260 [00:28<00:00,  8.97it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "features.shape = (87620, 674)\n",
-      "target.shape = (87620,)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "from src.data import transform_ts_data_into_features_and_target\n",
-    "\n",
-    "features, target = transform_ts_data_into_features_and_target(\n",
-    "rides,\n",
-    "n_sez_len = 24*28*1,\n",
-    "step_size = 24\n",
-    ")\n",
-    "\n",
-    "print(f'{features.shape = }')\n",
-    "print(f'{target.shape = }')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tabular_data = features\n",
-    "tabular_data['target_rides_next_hour'] = target\n",
-    "\n",
-    "from src.paths import TRANSFORMED_DATA_DIR\n",
-    "tabular_data.to_parquet(TRANSFORMED_DATA_DIR / 'tabular_data.parquet')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "id": "43e8dede",
    "metadata": {},
    "outputs": [
     {
@@ -488,18 +229,176 @@
        "[5 rows x 675 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "features.head()"
+    "import pandas as pd\n",
+    "from src.paths import TRANSFORMED_DATA_DIR\n",
+    "\n",
+    "df = pd.read_parquet(TRANSFORMED_DATA_DIR / 'tabular_data.parquet')\n",
+    "\n",
+    "df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "679a3754",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_train.shape = (31980, 674)\n",
+      "y_train.shape = (31980,)\n",
+      "X_test.shape = (55640, 674)\n",
+      "y_test.shape = (55640,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime, timezone\n",
+    "from src.data_split import train_test_split\n",
+    "\n",
+    "X_train, y_train, X_test, y_test = train_test_split(df, cutoff_date=datetime(2022, 6, 1, 0, 0, 0, tzinfo=timezone.utc), target_column_name='target_rides_next_hour')\n",
+    "\n",
+    "print(f'{X_train.shape = }')\n",
+    "print(f'{y_train.shape = }')\n",
+    "print(f'{X_test.shape = }')\n",
+    "print(f'{y_test.shape = }')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "8c59ba4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "class BaselineModelPreviousHour:\n",
+    "\n",
+    "    def fit(self, X_train: pd.DataFrame, y_train: pd.Series):\n",
+    "        pass\n",
+    "\n",
+    "    def predict(self, X_test: pd.DataFrame) -> np.array:\n",
+    "\n",
+    "        return X_test[f'rides_previous_1_hour']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "89d4a5ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = BaselineModelPreviousHour()\n",
+    "model.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ad878659",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "8499b6ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test mae: 3.236632823944092\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_absolute_error\n",
+    "\n",
+    "test_mae  = mean_absolute_error(y_test, predictions)\n",
+    "print(f'test mae: {test_mae}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "dd8aa7ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "class BaselineModelPreviousHour:\n",
+    "\n",
+    "    def fit(self, X_train: pd.DataFrame, y_train: pd.Series):\n",
+    "        pass\n",
+    "\n",
+    "    def predict(self, X_test: pd.DataFrame) -> np.array:\n",
+    "\n",
+    "        return X_test[f'rides_previous_{7*24}_hour']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "98d55279",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = BaselineModelPreviousHour()\n",
+    "predictions = model.predict(X_test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "07283e59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class BaselineModelLast4Weeks:\n",
+    "\n",
+    "    def fit(self, X_train: pd.DataFrame, y_train: pd.Series):\n",
+    "        pass\n",
+    "\n",
+    "    def predict(self, X_test: pd.DataFrame) -> np.array:\n",
+    "\n",
+    "        return 0.25 * (X_test[f'rides_previous_{7*24}_hour'] + \\\n",
+    "                       X_test[f'rides_previous_{14*24}_hour'] + \\\n",
+    "                       X_test[f'rides_previous_{21*24}_hour'] + \\\n",
+    "                         X_test[f'rides_previous_{28*24}_hour'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c1f5896d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = BaselineModelLast4Weeks()\n",
+    "predictions = model.predict(X_test)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "29e4d500",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -525,5 +424,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 5
 }
